# ascii-webcam

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: ascii_conversion.rs
src/: app.rs  ascii.rs  error.rs  lib.rs  main.rs  terminal.rs  video.rs
tests/: app_tests.rs  ascii_tests.rs  terminal_tests.rs  video_tests.rs
