[package]
name = "ascii-webcam"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
opencv = { version = "0.92.3", features = ["videoio", "imgproc"] }
ratatui = "0.28.1"
thiserror = "1.0.63"

[lib]
name = "ascii_webcam"
path = "src/lib.rs"

[[bin]]
name = "ascii-webcam"
path = "src/main.rs"
