[package]
name = "ascii-webcam"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A webcam that visualizes its output as ASCII art directly in the terminal"
homepage = "https://github.com/nubilfi/ascii-webcam"
documentation = "https://docs.rs/ascii-webcam/latest/ascii-webcam"
repository = "https://github.com/nubilfi/ascii-webcam"
keywords = ["ASCII", "opencv", "ratatui"]
readme = "README.md"
exclude = [
  ".github/*",
  ".gitignore",
  "assets/*",
  "benches/*",
]

[dependencies]
color-eyre = "0.6.3"
crossbeam-channel = "0.5.13"
crossterm = { version = "0.28.1", features = ["event-stream"] }
lazy_static = "1.5.0"
opencv = { version = "0.93.0", features = ["videoio", "imgproc"] }
ratatui = "0.28.1"
thiserror = "1.0.63"

[lib]
name = "ascii_webcam"
path = "src/lib.rs"

[[bin]]
name = "ascii-webcam"
path = "src/main.rs"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/v{version}/{name}-{version}-{target}.tar.gz"
bin-dir = "{bin}{binary-ext}"
pkg-fmt = "tgz"

[[bench]]
name = "ascii_conversion"
harness = false
